// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Turn Order | Configuration | actions should dispatch fetchFromDB action 1`] = `
Array [
  Object {
    "type": "TurnOrder/Configuration/FETCH_FROM_DB",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch fetchFromDBFailed action 1`] = `
Array [
  Object {
    "type": "TurnOrder/Configuration/FETCH_FROM_DB_FAILURE",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch fetchFromDBSuccessful action 1`] = `
Array [
  Object {
    "payload": Object {
      "Mode": "Default",
      "SelectedPlayerCount": Object {
        "id": "onePlayer",
        "name": "1",
        "variations": Object {
          "34alternating": Object {
            "id": "34alternating",
            "name": "3/4 Cards alternating",
            "turnOrderCards": Array [
              Object {
                "id": "player1-1",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-2",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-3",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "alternate": true,
                "id": "player-1-alternating",
                "name": "Player 1 (alternate)",
                "type": "player1",
              },
              Object {
                "id": "nemesis-1",
                "name": "Nemesis",
                "type": "nemesis",
              },
              Object {
                "id": "nemesis-2",
                "name": "Nemesis",
                "type": "nemesis",
              },
            ],
          },
          "4toc": Object {
            "id": "4toc",
            "name": "4 ToC",
            "turnOrderCards": Array [
              Object {
                "id": "player1-1",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-2",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-3",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-4",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "nemesis-1",
                "name": "Nemesis",
                "type": "nemesis",
              },
              Object {
                "id": "nemesis-2",
                "name": "Nemesis",
                "type": "nemesis",
              },
            ],
          },
          "default": Object {
            "id": "default",
            "name": "Default (3 ToC)",
            "turnOrderCards": Array [
              Object {
                "id": "player1-1",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-2",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "player1-3",
                "name": "Player 1",
                "type": "player1",
              },
              Object {
                "id": "nemesis-1",
                "name": "Nemesis",
                "type": "nemesis",
              },
              Object {
                "id": "nemesis-2",
                "name": "Nemesis",
                "type": "nemesis",
              },
            ],
          },
        },
      },
      "SelectedSetup": Object {
        "id": "default",
        "name": "Default (3 ToC)",
        "turnOrderCards": Array [
          Object {
            "id": "player1-1",
            "name": "Player 1",
            "type": "player1",
          },
          Object {
            "id": "player1-2",
            "name": "Player 1",
            "type": "player1",
          },
          Object {
            "id": "player1-3",
            "name": "Player 1",
            "type": "player1",
          },
          Object {
            "id": "nemesis-1",
            "name": "Nemesis",
            "type": "nemesis",
          },
          Object {
            "id": "nemesis-2",
            "name": "Nemesis",
            "type": "nemesis",
          },
        ],
      },
    },
    "type": "TurnOrder/Configuration/FETCH_FROM_DB_SUCCESS",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch noop action 1`] = `
Array [
  Object {
    "type": "NOOP",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch selectPlayerCount action with payload 1`] = `
Array [
  Object {
    "payload": "twoPlayers",
    "type": "TurnOrder/Configuration/SELECT_PLAYER_COUNT",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch selectSetup action with payload 1`] = `
Array [
  Object {
    "payload": "default",
    "type": "TurnOrder/Configuration/SELECT_SETUP",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch setMode action with payload 1`] = `
Array [
  Object {
    "payload": "Default",
    "type": "TurnOrder/Configuration/SET_MODE",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch setToDB action 1`] = `
Array [
  Object {
    "type": "TurnOrder/Configuration/SET_TO_DB",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch setToDBFailed action 1`] = `
Array [
  Object {
    "type": "TurnOrder/Configuration/SET_TO_DB_FAILURE",
  },
]
`;

exports[`Turn Order | Configuration | actions should dispatch setToDBSuccessful action 1`] = `
Array [
  Object {
    "type": "TurnOrder/Configuration/SET_TO_DB_SUCCESS",
  },
]
`;
